force-app/main/default/objects/Lead_Routing_Rule__mdt/Lead_Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Regras de roteamento de Lead para fila, avaliadas em Apex depois do scoring. Vive em Custom Metadata para que remanejar faixa de pontuacao, pais, setor ou fila de destino seja mudanca de configuracao e nunca deploy de Apex.</description>
    <label>Regra de Roteamento de Lead</label>
    <pluralLabel>Regras de Roteamento de Lead</pluralLabel>
</CustomObject>