force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se o motor de roteamento considera esta regra. Regra desligada permanece como historico em vez de ser apagada, o que torna a mudanca reversivel.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>