force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Pais do Lead que a regra atende. Vazio significa qualquer pais, o que evita ter de criar um registro por combinacao de pais e faixa de pontuacao.</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>