force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Setor do Lead que a regra atende. Vazio significa qualquer setor, pela mesma razao de Country__c.</description>
    <label>Industry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>