force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Limite superior da faixa de Lead_Score__c atendida pela regra, inclusivo. Vazio significa sem limite superior.</description>
    <label>Max Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>