force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Min_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Score__c</fullName>
    <description>Limite inferior da faixa de Lead_Score__c atendida pela regra, inclusivo. Vazio significa sem limite inferior.</description>
    <label>Min Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>