force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Rule_Order__c</fullName>
    <description>Ordem de avaliacao da regra. O menor numero decide primeiro, e a primeira regra que casa define a fila: sem essa ordem, faixas sobrepostas dariam resultados diferentes a cada execucao.</description>
    <label>Rule Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>