force-app/main/default/objects/Lead_Routing_Rule__mdt/fields/Target_Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Queue_Developer_Name__c</fullName>
    <description>DeveloperName da fila que recebe o Lead quando a regra casa. Guarda o nome de API e nao o Id porque Id de Group muda entre orgs e quebraria o registro na promocao entre ambientes; o Apex resolve o Id por consulta a Group no momento do roteamento.</description>
    <label>Target Queue Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>